# ccrypto

./: .gitignore  CMakeLists.txt  README.md
src/: chacha.c  crypto-ops.c  crypto-ops.h  hash-ops.h
